--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>主頁</title>
+    <style type="text/css"></style>
+    <title>主頁 | ChuTingI</title>
   </head>
-  <body>
-    <h1>2023/01/13 首次更新</h1>
+  <body style="background-color:rgb(169, 202, 180)">
+    <h3>2023/02/02 Last update.</h3>
+    <p>Welcome to my personal website. Here is all about what I learn and what I love.</p>
+    <p>Wish you enjoy this journey together.</p>
+    <br>
+    <p>Ongoing maintenance and updating.</p>
   </body>
 </html>
