Add bilingual files. (Mandarin and English)

--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
     <style type="text/css"></style>
     <title>主頁 | ChuTingI</title>
   </head>
-  <body style="background-color:rgb(169, 202, 180)">
-    <h3>2023/02/02 Last update.</h3>
-    <p>Welcome to my personal website. Here is all about what I learn and what I love.</p>
-    <p>Wish you enjoy this journey together.</p>
+
+  <body style="background-color:rgb(250, 220, 190)">
+    <h3 style="background-color: rgb(200, 200, 200); width: 100; height: 20;">Hey</h3>
+    <!--Date Update-->
+    <p style="font: icon; font-size: 10px;">2023/02/17 Last update.</p>
+    <p>嗨！歡迎來我的網站，這裡是我學習紀錄和記錄興趣的一方天地。</p>
+    <p>和我一起享受這趟旅程吧！</p>
+    <b>持續更新中～</b>
     <br>
-    <p>Ongoing maintenance and updating.</p>
+
+    <dl>
+      <dt style="font-size: 20px; color: rgb(0, 100, 0);">
+        <b>目錄</b>
+      </dt>
+    </dl>
+    <ul>
+      <li>
+        <a>HTML learning note</a>
+      </li>
+      <li>記得註解!!</li>
+    </ul>
   </body>
 </html>
