--- a/en/index.html
+++ b/en/index.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <title>Home | ChuTingI</title>
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
     <style type="text/css"></style>
-    <title>Home | ChuTingI</title>
   </head>
 
-  <body style="background-color:rgb(250, 220, 190)">
-    <h3 style="background-color: rgb(200, 200, 200); width: 100; height: 20;">Hey</h3>
+  <body style="background-color:rgb(233, 229, 214);">
+    <h3 style="background-color: rgb(172, 185, 146); color: rgb(70, 78, 46);">Hey</h3>
     <!--Date Update-->
-    <p style="font: icon; font-size: 10px;">2023/02/17 Last update.</p>
+    <p style="font: icon; font-size: 10px;">2023/05/05 Last update.</p>
     <p>Hello, welcome to my personal website. Here is all about what I learned and what I love.</p>
     <p>Wish you enjoy this journey together.</p>
     <b>Ongoing maintenance and updating.</b>
     <br>
 
     <dl>
-      <dt style="font-size: 20px; color: rgb(0, 100, 0);">
+      <dt style="font-size: 20px; color: rgb(54, 39, 6);">
         <b>Content</b>
       </dt>
     </dl>
     <ul>
       <li>
-        <a href="https://chutingi.github.io/HTML/">HTML learning note</a>
+        <a href="https://chutingi.github.io/en/HTML/">HTML learning note</a>
       </li>
       <li>Remember the comment!!</li>
+      <li>
+        <a>OpenBMC</a>
+      </li>
     </ul>
   </body>
 </html>
