--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-Hant-TW">
   <head>
-    <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
-    <style type="text/css"></style>
     <title>主頁 | ChuTingI</title>
+    <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
+    <meta name="keywords" content="ChuTingI">
+    <meta name="author" content="ChuTingI">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style type="text/css"></style>
   </head>
 
-  <body style="background-color:rgb(250, 220, 190)">
-    <h3 style="background-color: rgb(200, 200, 200); width: 100; height: 20;">Hey</h3>
+  <body style="background-color:rgb(233, 229, 214);">
+    <h3 style="background-color: rgb(172, 185, 146); color: rgb(70, 78, 46);">Hey</h3>
     <!--Date Update-->
-    <p style="font: icon; font-size: 10px;">2023/02/17 Last update.</p>
-    <p>嗨！歡迎來我的網站，這裡是我學習紀錄和記錄興趣的一方天地。</p>
-    <p>和我一起享受這趟旅程吧！</p>
-    <b>持續更新中～</b>
+    <p style="font: icon; font-size: 10px;">2023/05/05 Last update.</p>
+    <p>嗨！歡迎來我的網站，這裡是我記錄學習和興趣的一方天地。
+      <br>和我一起享受這趟旅程吧！</p>
+    <p>持續維護與更新<br><strong>記得註解！</strong></p>
+    <a href="https://chutingi.github.io/test.html">測試區</a>
     <br>
 
+    <h1 style="color: rgb(54, 39, 6);"><strong>目錄</strong></h1>
     <dl>
-      <dt style="font-size: 20px; color: rgb(0, 100, 0);">
-        <b>目錄</b>
-      </dt>
+      <dt>資訊</dt>
+        <dd>OpenBMC</dd>
+      <dt>休閒</dt>
+        <dd>鈎針編織</dd>
     </dl>
-    <ul>
-      <li>
-        <a>HTML learning note</a>
-      </li>
-      <li>記得註解!!</li>
-    </ul>
   </body>
 </html>
