--- a/index.html
+++ b/index.html
@@ -7,24 +7,21 @@
     <meta name="author" content="ChuTingI">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style type="text/css"></style>
+    <!--咖啡色rgb(54, 39, 6)-->
   </head>
 
   <body style="background-color:rgb(233, 229, 214);">
     <h3 style="background-color: rgb(172, 185, 146); color: rgb(70, 78, 46);">Hey</h3>
     <!--Date Update-->
-    <p style="font: icon; font-size: 10px;">2023/05/05 Last update.</p>
-    <p>嗨！歡迎來我的網站，這裡是我記錄學習和興趣的一方天地。
+    <p style="font: icon; font-size: 10px;">2023/05/12 Last update.</p>
+    <p>嗨！這裡是我記錄學習和興趣的一方天地。
       <br>和我一起享受這趟旅程吧！</p>
     <p>持續維護與更新<br><strong>記得註解！</strong></p>
-    <a href="https://chutingi.github.io/test.html">測試區</a>
-    <br>
-
-    <h1 style="color: rgb(54, 39, 6);"><strong>目錄</strong></h1>
-    <dl>
-      <dt>資訊</dt>
-        <dd>OpenBMC</dd>
-      <dt>休閒</dt>
-        <dd>鈎針編織</dd>
-    </dl>
+    <ul style="list-style-type: georgian;">
+      <li>Bio</li>
+      <li>Hobby</li>
+      <li>Note</li>
+      <li><a href="https://chutingi.github.io/test.html">Test</a></li>
+    </ul>
   </body>
 </html>
