--- a/test.html
+++ b/test.html
@@ -14,9 +14,18 @@
       <title>測試區 | ChuTingI</title>
   </head>
 
-  <body style="background-color: rgb(241, 219, 191);">
+  <body style="background-color: rgb(233, 229, 214);">
+    <nav>
+      <ul>
+        <li><a  href="https://chutingi.github.io/">HOME</a></li>
+        <li><a  href="https://chutingi.github.io/en/">EN</a></li>
+      </ul>
+    </nav>
     <!--黑色空心方框-->
     <p style="padding: 15px; line-height: 1.5; text-align: center; border: 3px solid #000;">Hey</p>
+    <p style="background-color: rgb(70, 78, 46); color: rgb(233, 229, 214); font-family: Georgia, 'Times New Roman', Times, serif; font-size: 20px;
+              position: relative; left: 30%; height: 40px; width: 40%; text-align: center;
+              padding-top: 8px; line-height: 1.5;">Hey</p>
     <!--顯示額外資訊-->
     <div title="hello~~">Hover Me!</div>
 
@@ -37,5 +46,27 @@
         </tbody>
       </table>
     </div>
+
+    <!--引用文字-->
+    <blockquote cite="https://chutingi.github.io/">
+      <h2>HTML Tag: blockquote</h2>
+      <p>A block of text that is quoted from elsewhere.</p>
+    </blockquote>
+    <h2>HTML Tag: blockquote</h2>
+    <p>A block of text that is quoted from elsewhere.</p>
+    <p>Everytime Kenny is killed, Stan will announce 
+      <q cite="http://en.wikipedia.org/wiki/Kenny_McCormick#Cultural_impact">
+        Oh my God, you/they killed Kenny!
+      </q>.
+    </p>
+
+    <hgroup id="document-title">
+      <h1>HTML</h1>
+      <h2>Living Standard — Last Updated 12 August 2016</h2>
+    </hgroup>
+
+    <canvas width="800" height="450">
+      你的瀏覽器不支援 canvas!
+    </canvas>
   </body>
 </html>
