--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <meta name="keywords" content="ChuTingI">
     <meta name="author" content="ChuTingI">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles/basic.css" rel="stylesheet">
+    <!-- link要在base前面，base才不會影響到link -->
+    <base href="https://chutingi.github.io/" target="_self">
     <style type="text/css"></style>
-    <!--咖啡色rgb(54, 39, 6)-->
   </head>
 
-  <body style="background-color:rgb(233, 229, 214);">
-    <h3 style="background-color: rgb(172, 185, 146); color: rgb(70, 78, 46);">Hey</h3>
+  <body>
+    <h1 style="background-color: rgb(172, 185, 146); color: rgb(70, 78, 46);">Hey</h1><!-- line-height: 1.5; padding-left: 10px;-->
     <!--Date Update-->
-    <p style="font: icon; font-size: 10px;">2023/05/12 Last update.</p>
+    <p style="font: icon; font-size: 10px;">2023/05/18 Last updated.</p>
     <p>嗨！這裡是我記錄學習和興趣的一方天地。
       <br>和我一起享受這趟旅程吧！</p>
     <p>持續維護與更新<br><strong>記得註解！</strong></p>
@@ -21,7 +23,8 @@
       <li>Bio</li>
       <li>Hobby</li>
       <li>Note</li>
-      <li><a href="https://chutingi.github.io/test.html">Test</a></li>
+      <li><a href="test.html">Test</a></li>
+      <li><a href="bookmark.html">Website Bookmarks</a></li>
     </ul>
   </body>
 </html>
