Add Tokyo2023 travel page

--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
     <ul style="list-style-type: georgian;">
       <li>Bio</li>
       <li>Hobby</li>
-      <li>Note</li>
-      <li><a href="test.html">Test</a></li>
-      <li><a href="bookmark.html">Website Bookmarks</a></li>
+      <li>Learning Note</li>
+      <li><a href="test.html">Test Page</a></li>
+      <li><a href="bookmark.html">Website Bookmark</a></li>
+      <!--
+      <li><a href="travel/tokyo2023.html">Travel-Tokyo2023</a></li>-->
     </ul>
   </body>
 </html>
