--- a/travel/tokyo2023.html
+++ b/travel/tokyo2023.html
@@ -4,6 +4,7 @@
     <title>東京2023 | ChuTingI</title>
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
     <link href="../styles/basic.css" rel="stylesheet">
+    <base href="https://chutingi.github.io/" target="_self">
     <style type="text/css">
       .h4-indent {
         margin-left: 20px;
@@ -11,6 +12,10 @@
       .time {
         font-weight: bold;
         color: red;
+      }
+      .icon {
+        float: left;
+        padding-right: 10px;
       }
     </style>
   </head>
@@ -34,6 +39,7 @@
       </div>
       <h3>晚餐：一蘭</h3>
         <p>地址：</p>
+
     <h2 id="Day2">Day2 6/26 (一)</h2>
       <h3>早餐</h3>
       <h3>午餐</h3>
@@ -42,33 +48,44 @@
           已訂位 17:00 6位<br>
           地址：
         </p>
+
     <h2 id="Day3">Day3 6/27 (二)</h2>
       <h3>早餐</h3>
-      <h3>午餐：吉祥寺附近的人氣漢堡排</h3>
-        <p>地址：</p>
+      <h3>午餐：挽肉と米 吉祥寺店</h3>
+        <img src="../images/pin-24px.png" class="icon" alt="address" width="24px">
+        <p>2 Chome-8-3 Kichijoji Honcho, Musashino, Tokyo 180-0004日本&ensp;
+          <a href="https://goo.gl/maps/hhoreH4saPF5QHmP6">地圖</a></p>
+        <img src="../images/metro-24px.png" class="icon" alt="metro station" width="24px">
+        <p>JR 吉祥寺站</p>
         <ul>
-          <li>早上08:00排隊拿號碼牌</li>
+          <li>早上08:00到，排隊領號碼牌，越前面可以選的時段越多</li>
           <li>可能變下午吃，要看拿到號碼牌的時間</li>
         </ul>
+
     <h2 id="Day4">Day4 6/28 (三)</h2>
       <h3>迪士尼樂園(待定)</h3>
         <p style="color: red;">尚未訂票</p>
+
     <h2 id="Day5">Day5 6/29 (四)</h2>
       <h3>早餐</h3>
       <h3>午餐</h3>
       <h3>晚餐</h3>
+
     <h2 id="Day6">Day6 6/30 (五)</h2>
       <h3>早餐：築地市場(待定)</h3>
       <h3>午餐</h3>
       <h3>晚餐</h3>
+
     <h2 id="Day7">Day7 7/1 (六)</h2>
       <h3>早餐</h3>
       <h3>午餐</h3>
       <h3>晚餐</h3>
+
     <h2 id="Day8">Day8 7/2 (日)</h2>
       <h3>早餐</h3>
       <h3>午餐</h3>
       <h3>晚餐</h3>
+
     <h2 id="Day9">Day9 7/3 (一)</h2>
       <p>這天大概是藥妝店之旅</p>
       <h3>早餐</h3>
@@ -79,6 +96,7 @@
       <h4>兩老航班 華航</h4>
         <p>(JP)成田機場 <span class="time">18:20</span> - (TW)桃園機場 <span class="time">21:10</span></p>
       </div>
+
     <h2>還沒排進的行程</h2>
     <ul>
       <li>Shibuya sky(待定)(尚未訂票)</li>
