--- a/travel/tokyo2023.html
+++ b/travel/tokyo2023.html
@@ -17,6 +17,9 @@
         float: left;
         padding-right: 10px;
       }
+      .metro {
+        padding: 3px 5px;
+      }
     </style>
   </head>
 
@@ -37,6 +40,12 @@
       <h4>兩老航班 華航</h4>
         <p>(TW)桃園機場 <span class="time">08:50</span> - (JP)成田機場 <span class="time">13:15</span></p>
       </div>
+      <h3>這幾天的家：ReLa Higashi Matsudo</h3>
+        <img src="../images/home-24px.png" class="icon" alt="home" width="24px">
+          <p>〒270-2225 千葉県松戸市東松戸１丁目３−2&ensp;
+            <a href="https://goo.gl/maps/9rd9KkithYw98Kgr7">地圖</a></p>
+        <img src="../images/metro-24px.png" class="icon" alt="metro station" width="24px">
+          <p>JR 東松戶站</p>
       <h3>晚餐：一蘭</h3>
         <p>地址：</p>
 
@@ -53,14 +62,15 @@
       <h3>早餐</h3>
       <h3>午餐：挽肉と米 吉祥寺店</h3>
         <img src="../images/pin-24px.png" class="icon" alt="address" width="24px">
-        <p>2 Chome-8-3 Kichijoji Honcho, Musashino, Tokyo 180-0004日本&ensp;
-          <a href="https://goo.gl/maps/hhoreH4saPF5QHmP6">地圖</a></p>
+          <p>〒180-0004 東京都武蔵野市吉祥寺本町２丁目８−3&ensp;
+            <a href="https://goo.gl/maps/hhoreH4saPF5QHmP6">地圖</a></p>
         <img src="../images/metro-24px.png" class="icon" alt="metro station" width="24px">
-        <p>JR 吉祥寺站</p>
+          <p>JR 吉祥寺站</p>
         <ul>
           <li>早上08:00到，排隊領號碼牌，越前面可以選的時段越多</li>
           <li>可能變下午吃，要看拿到號碼牌的時間</li>
         </ul>
+      <h3>晚餐</h3>
 
     <h2 id="Day4">Day4 6/28 (三)</h2>
       <h3>迪士尼樂園(待定)</h3>
