Add js and update tokyo2023

--- a/test.html
+++ b/test.html
@@ -120,6 +120,10 @@
           <td>&amp;apos;</td>
         </tr>
         <tr>
+          <td>&#39;</td>
+          <td>&amp;#39;</td>
+        </tr>
+        <tr>
           <td>空格</td>
           <td>&amp;nbsp;</td>
         </tr>
@@ -137,5 +141,6 @@
         </tr>
       </tbody>
     </table>
+    <!--<script src="scripts/test.js"></script>-->
   </body>
 </html>
