--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>主頁 | ChuTingI</title>
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
-    <meta name="keywords" content="ChuTingI">
     <meta name="author" content="ChuTingI">
+    <meta name="description" content="一個平凡又沒什麼特別的人努力用網頁記錄下自己覺得比較特別的事的地方。">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles/basic.css" rel="stylesheet">
     <!-- link要在base前面，base才不會影響到link -->
