--- a/travel/tokyo2023.html
+++ b/travel/tokyo2023.html
@@ -42,7 +42,7 @@
       </div>
       <h3>這幾天的家：ReLa Higashi Matsudo</h3>
         <img src="../images/home-24px.png" class="icon" alt="home" width="24px">
-          <p>〒270-2225 千葉県松戸市東松戸１丁目３−2&ensp;
+          <p><span lang="jp">〒270-2225 千葉県松戸市東松戸１丁目３−2</span>&ensp;
             <a href="https://goo.gl/maps/9rd9KkithYw98Kgr7">地圖</a></p>
         <img src="../images/metro-24px.png" class="icon" alt="metro station" width="24px">
           <p>JR 東松戶站</p>
@@ -52,17 +52,19 @@
     <h2 id="Day2">Day2 6/26 (一)</h2>
       <h3>早餐</h3>
       <h3>午餐</h3>
-      <h3>晚餐：美登利壽司</h3>
-        <p>
-          已訂位 17:00 6位<br>
-          地址：
-        </p>
+      <h3>晚餐：<span lang="jp">梅丘 寿司の美登利 渋谷店</span></h3>
+        <img src="../images/pin-24px.png" class="icon" alt="address" width="24px">
+          <p><span lang="jp">〒150-0043 東京都渋谷区道玄坂１丁目１２−3 マークシティイースト ４Ｆ</span>&ensp;
+            <a href="https://goo.gl/maps/8ZeEysXZMhZCpjbVA">地圖</a></p>
+        <ul>
+          <li>現場候位，要早點去那邊登記</li>
+        </ul>
 
     <h2 id="Day3">Day3 6/27 (二)</h2>
       <h3>早餐</h3>
-      <h3>午餐：挽肉と米 吉祥寺店</h3>
+      <h3>午餐：<span lang="jp">挽肉と米 吉祥寺店</span></h3>
         <img src="../images/pin-24px.png" class="icon" alt="address" width="24px">
-          <p>〒180-0004 東京都武蔵野市吉祥寺本町２丁目８−3&ensp;
+          <p><span lang="jp">〒180-0004 東京都武蔵野市吉祥寺本町２丁目８−3</span>&ensp;
             <a href="https://goo.gl/maps/hhoreH4saPF5QHmP6">地圖</a></p>
         <img src="../images/metro-24px.png" class="icon" alt="metro station" width="24px">
           <p>JR 吉祥寺站</p>
@@ -70,6 +72,18 @@
           <li>早上08:00到，排隊領號碼牌，越前面可以選的時段越多</li>
           <li>可能變下午吃，要看拿到號碼牌的時間</li>
         </ul>
+      <h3>三鷹之森吉卜力美術館?剛好這天閉店，換一天吃漢堡肉?喔，6月沒票了</h3>
+        <p>不事先購票是無法進入的，入場會檢驗票券（印出來）跟身分證明文件（外國人的話就是護照）<br>
+        要遵守購買的時間入場，但入場後不限制逛展區時間，可以逛到打烊<br>
+        從吉祥寺過來可以搭公車或是走路約15-20分鐘，只有門口跟入場前可以拍照，進場後就不行了❌<br>
+        展區內有免費置物櫃跟寄放嬰兒車的地方，很方便<br>
+        大部分是展出手稿及裝置藝術品，都是日文，但一些動畫可以看，入場門票會是一張膠卷型的門票，可依據門票在劇場內坐著觀看20分鐘的動畫，雖然是日文發音，但簡單易懂。<br>
+        頂樓有戶外花園，有天空之城的機器人可以排隊拍照<br>
+        也有咖啡廳可以吃一點東西跟冰淇淋，太晚來的話很多品項都會賣完<br>
+        絕對要去紀念品店逛逛，很多有特色的紀念品可以選購<br>
+        入場門票1000円，真的很超值，建議沒來過的至少要來一趟看看</p>
+        <a href="https://l-tike.com/st1/ghibli-en/Tt/Ttg030top/restore?">購票網址</a>
+        <p>6/10早上9點開始賣7月的票</p>
       <h3>晚餐</h3>
 
     <h2 id="Day4">Day4 6/28 (三)</h2>
@@ -116,6 +130,15 @@
       <li>Shogun burger</li>
       <li>東京車站布丁</li>
       <li>富士山腳下</li>
+      <li>原宿一日遊</li>
+      <ul>
+        <li>明智神宮</li>
+        <li>中午 Afuri原宿</li>
+        <li>下午表參道(浴衣體驗?)</li>
+        <li>晚上附近吃飯</li>
+        <li>Other itineraries?</li>
+        <li>End</li>
+      </ul>
     </ul>
   </body>
 </html>
