--- a/travel/tokyo2023.html
+++ b/travel/tokyo2023.html
@@ -4,7 +4,6 @@
     <title>東京2023 | ChuTingI</title>
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
     <link href="../styles/basic.css" rel="stylesheet">
-    <base href="https://chutingi.github.io/" target="_self">
     <style type="text/css">
       .h4-indent {
         margin-left: 20px;
@@ -25,7 +24,7 @@
 
   <body>
     <h1>6/25 ~ 7/3 日本東京自由行</h1>
-    <p style="font: icon; font-size: 10px; text-align: right;">2023/05/19 Last updated</p>
+    <p style="font: icon; font-size: 10px; text-align: right;">2023/05/26 Last updated</p>
     <h2 id="Day1">Day1 6/25 (日)</h2>
       <h3>去程</h3><div class="h4-indent">
       <h4>三姊妹航班 日本捷星航空(jetstar)</h4>
@@ -83,7 +82,7 @@
         絕對要去紀念品店逛逛，很多有特色的紀念品可以選購<br>
         入場門票1000円，真的很超值，建議沒來過的至少要來一趟看看</p>
         <a href="https://l-tike.com/st1/ghibli-en/Tt/Ttg030top/restore?">購票網址</a>
-        <p>6/10早上9點開始賣7月的票</p>
+        <p><strong>6/10早上9點開始賣7月的票</strong></p>
       <h3>晚餐</h3>
 
     <h2 id="Day4">Day4 6/28 (三)</h2>
