Change absolute path to relative path.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <title>主頁 | ChuTingI</title>
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
     <meta name="author" content="ChuTingI">
-    <meta name="description" content="一個平凡又沒什麼特別的人努力用網頁記錄下自己覺得比較特別的事的地方。">
+    <meta name="description" content="一個平凡又沒什麼特別的人用網頁記錄下自己覺得比較特別的事的地方。">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles/basic.css" rel="stylesheet">
-    <!-- link要在base前面，base才不會影響到link -->
-    <base href="https://chutingi.github.io/" target="_self">
+    <!-- link要在base前面，base才不會影響到link
+    <base href="https://chutingi.github.io/" target="_self">-->
     <style type="text/css"></style>
   </head>
 
