--- a/test.html
+++ b/test.html
@@ -46,8 +46,8 @@
   <body>
     <nav>
       <ul>
-        <li><a  href="https://chutingi.github.io/">HOME</a></li>
-        <li><a  href="https://chutingi.github.io/en/">EN</a></li>
+        <li><a  href="index.html">HOME</a></li>
+        <li><a  href="en/index.html">EN</a></li>
       </ul>
     </nav>
     <!--黑色空心方框-->
