--- a/travel/tokyo2023.html
+++ b/travel/tokyo2023.html
@@ -128,6 +128,7 @@
       <li>Shake shack</li>
       <li>Shogun burger</li>
       <li>東京車站布丁</li>
+      <li>抹茶甜點店?冰店?</li>
       <li>富士山腳下</li>
       <li>原宿一日遊</li>
       <ul>
