Update tokyo2023 & bookmarks

--- a/bookmark.html
+++ b/bookmark.html
@@ -21,7 +21,7 @@
   <body style="font-family: Georgia, 'Times New Roman', Times, serif;">
     <h3 style="background-color:rgb(172, 185, 146); color:rgb(70, 78, 46); line-height: 1.5; padding-left: 10px;">Website Links</h3>
     <!--Date Update-->
-    <p style="font: icon; font-size: 10px;">2023/05/18 Last updated.</p>
+    <p style="font: icon; font-size: 10px;">2023/06/02 Last updated.</p>
     <p>記錄一些有用的、有趣的網站，供以後查閱。</p>
     <ul>3G/4G/5G Network share notes
       <li><a href="https://www.sharetechnote.com/Home.html">ShareTechnote</a></li>
@@ -36,6 +36,10 @@
     </ul>
     <ul>實用
       <li><a href="https://facemood.grtimed.com/">顏文字</a></li>
+    </ul>
+    <ul>玄學
+      <li><a href="https://fate.windada.com/cgi-bin/fate">紫微斗數命盤</a></li>
+      <li><a href="https://www.ximizi.net/bazi_shengchen_bazi.php">生辰五行</a></li>
     </ul>
   </body>
 </html>
