--- a/travel/tokyo2023.html
+++ b/travel/tokyo2023.html
@@ -24,20 +24,21 @@
 
   <body>
     <h1>6/25 ~ 7/3 日本東京自由行</h1>
-    <p style="font: icon; font-size: 10px; text-align: right;">2023/05/26 Last updated</p>
+    <p style="font: icon; font-size: 10px; text-align: right;">2023/05/29 Last updated</p>
     <h2 id="Day1">Day1 6/25 (日)</h2>
       <h3>去程</h3><div class="h4-indent">
       <h4>三姊妹航班 日本捷星航空(jetstar)</h4>
         <p>(TW)桃園機場 <span class="time">02:40</span> - (JP)成田機場 <span class="time">07:00</span></p>
         <ul>
           <li>行李寄放</li>
-          <li>機場巴士班次，一趟15分鐘？</li>
-          <li>附近商城晃晃？</li>
-          <li>吃午餐</li>
+          <li>機場巴士班次，一趟15分鐘？搭乘時間 9：47/13：20</li>
+          <img src="../images/airport-bus.jpg" width="600px">
+          <li>酒酒井Outlet</li>
           <li>13:30左右回到機場等阿華姊妹花</li>
         </ul>
       <h4>兩老航班 華航</h4>
         <p>(TW)桃園機場 <span class="time">08:50</span> - (JP)成田機場 <span class="time">13:15</span></p>
+        <p>接到後直接前往住宿點（查要多久會到）</p>
       </div>
       <h3>這幾天的家：ReLa Higashi Matsudo</h3>
         <img src="../images/home-24px.png" class="icon" alt="home" width="24px">
@@ -49,8 +50,32 @@
         <p>地址：</p>
 
     <h2 id="Day2">Day2 6/26 (一)</h2>
-      <h3>早餐</h3>
-      <h3>午餐</h3>
+      <p>原宿Day</p>
+      <h3>早午餐：bills Futako-Tamagawa</h3>
+        <img src="../images/pin-24px.png" class="icon" alt="address" width="24px">
+          <p><span lang="jp">〒158-0094 東京都世田谷区玉川２丁目２７−5 高島屋S・Cマロニエコート 3F</span>&ensp;
+            <a href="https://goo.gl/maps/zAkFivzp4X5pYXRj8">地圖</a></p>
+        <img src="../images/metro-24px.png" class="icon" alt="metro station" width="24px">
+          <p>二子玉川站</p>
+      <h3>竹下通逛街</h3>
+      <h3>晚餐：燒肉亭 六歌仙 新宿西口1號店</h3>
+        <img src="../images/pin-24px.png" class="icon" alt="address" width="24px">
+          <p><span lang="jp">〒160-0023 東京都新宿区西新宿１丁目３−1 新宿サンフラワービル 6F/7F</span>&ensp;
+            <a href="https://goo.gl/maps/HLDSE1AiNtwM3d736">地圖</a></p>
+        <img src="../images/metro-24px.png" class="icon" alt="metro station" width="24px">
+          <p>新宿西口站</p>
+
+    <h2 id="Day3">Day3 6/27 (二)</h2>
+      <h3>午餐：<span lang="jp">挽肉と米 渋谷店</span></h3>
+        <img src="../images/pin-24px.png" class="icon" alt="address" width="24px">
+          <p><span lang="jp">〒150-0043 東京都渋谷区道玄坂２丁目２８−1 椎津ビル ３F</span>&ensp;
+            <a href="https://goo.gl/maps/uQ9Yz1tpPzBuCpyh8">地圖</a></p>
+        <img src="../images/metro-24px.png" class="icon" alt="metro station" width="24px">
+          <p>JR 澀谷站</p>
+        <ul>
+          <li>早上<span class="time">08:00</span>到，排隊領號碼牌，越前面可以選的時段越多</li>
+          <li>可能變下午吃，要看拿到號碼牌的時間</li>
+        </ul>
       <h3>晚餐：<span lang="jp">梅丘 寿司の美登利 渋谷店</span></h3>
         <img src="../images/pin-24px.png" class="icon" alt="address" width="24px">
           <p><span lang="jp">〒150-0043 東京都渋谷区道玄坂１丁目１２−3 マークシティイースト ４Ｆ</span>&ensp;
@@ -58,32 +83,6 @@
         <ul>
           <li>現場候位，要早點去那邊登記</li>
         </ul>
-
-    <h2 id="Day3">Day3 6/27 (二)</h2>
-      <h3>早餐</h3>
-      <h3>午餐：<span lang="jp">挽肉と米 吉祥寺店</span></h3>
-        <img src="../images/pin-24px.png" class="icon" alt="address" width="24px">
-          <p><span lang="jp">〒180-0004 東京都武蔵野市吉祥寺本町２丁目８−3</span>&ensp;
-            <a href="https://goo.gl/maps/hhoreH4saPF5QHmP6">地圖</a></p>
-        <img src="../images/metro-24px.png" class="icon" alt="metro station" width="24px">
-          <p>JR 吉祥寺站</p>
-        <ul>
-          <li>早上08:00到，排隊領號碼牌，越前面可以選的時段越多</li>
-          <li>可能變下午吃，要看拿到號碼牌的時間</li>
-        </ul>
-      <h3>三鷹之森吉卜力美術館?剛好這天閉店，換一天吃漢堡肉?喔，6月沒票了</h3>
-        <p>不事先購票是無法進入的，入場會檢驗票券（印出來）跟身分證明文件（外國人的話就是護照）<br>
-        要遵守購買的時間入場，但入場後不限制逛展區時間，可以逛到打烊<br>
-        從吉祥寺過來可以搭公車或是走路約15-20分鐘，只有門口跟入場前可以拍照，進場後就不行了❌<br>
-        展區內有免費置物櫃跟寄放嬰兒車的地方，很方便<br>
-        大部分是展出手稿及裝置藝術品，都是日文，但一些動畫可以看，入場門票會是一張膠卷型的門票，可依據門票在劇場內坐著觀看20分鐘的動畫，雖然是日文發音，但簡單易懂。<br>
-        頂樓有戶外花園，有天空之城的機器人可以排隊拍照<br>
-        也有咖啡廳可以吃一點東西跟冰淇淋，太晚來的話很多品項都會賣完<br>
-        絕對要去紀念品店逛逛，很多有特色的紀念品可以選購<br>
-        入場門票1000円，真的很超值，建議沒來過的至少要來一趟看看</p>
-        <a href="https://l-tike.com/st1/ghibli-en/Tt/Ttg030top/restore?">購票網址</a>
-        <p><strong>6/10早上9點開始賣7月的票</strong></p>
-      <h3>晚餐</h3>
 
     <h2 id="Day4">Day4 6/28 (三)</h2>
       <h3>迪士尼樂園(待定)</h3>
@@ -105,12 +104,12 @@
       <h3>晚餐</h3>
 
     <h2 id="Day8">Day8 7/2 (日)</h2>
+      <p>這天大概是藥妝店之旅</p>
       <h3>早餐</h3>
       <h3>午餐</h3>
       <h3>晚餐</h3>
 
     <h2 id="Day9">Day9 7/3 (一)</h2>
-      <p>這天大概是藥妝店之旅</p>
       <h3>早餐</h3>
       <h3>午餐</h3>
       <h3>回程</h3><div class="h4-indent">
@@ -123,22 +122,25 @@
     <h2>還沒排進的行程</h2>
     <ul>
       <li>Shibuya sky(待定)(尚未訂票)</li>
-      <li>六歌仙燒肉</li>
       <li>Burger prince</li>
       <li>Shake shack</li>
       <li>Shogun burger</li>
-      <li>東京車站布丁</li>
       <li>抹茶甜點店?冰店?</li>
       <li>富士山腳下</li>
+      <li>根室花丸</li>
       <li>原宿一日遊</li>
       <ul>
+        <li>表參道</li>
         <li>明智神宮</li>
         <li>中午 Afuri原宿</li>
-        <li>下午表參道(浴衣體驗?)</li>
-        <li>晚上附近吃飯</li>
-        <li>Other itineraries?</li>
-        <li>End</li>
       </ul>
+      <li>築地市場</li>
+      <ul>
+        <li>Calbee+薯條店</li>
+        <li>東京車站布丁</li>
+      </ul>
+      <li>網卡</li>
+      <li>快速通關</li>
     </ul>
   </body>
 </html>
