0613 update: Add label, trying to implement accordion.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <!-- link要在base前面，base才不會影響到link
     <base href="https://chutingi.github.io/" target="_self">-->
     <style type="text/css"></style>
+    <!--
+      @media screen and (min-width: 1024px) {
+        //如果使用者視窗寬度 >= 1024px，載入這裡的 CSS。
+      }
+      @media screen and (min-width: 768px) and (max-width: 1023px) {
+        //如果使用者視窗寬度介於 768px ~ 1023px，載入這裡的 CSS。
+      }
+      @media screen and (max-width: 767px) {
+        //如果使用者視窗寬度 <= 767px，載入這裡的 CSS。
+      }
+    -->
   </head>
 
   <body>
