--- a/travel/tokyo2023.html
+++ b/travel/tokyo2023.html
@@ -3,6 +3,7 @@
   <head>
     <title>東京2023 | ChuTingI</title>
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../styles/basic.css" rel="stylesheet">
     <style type="text/css">
       .h4-indent {
@@ -25,122 +26,161 @@
   <body>
     <h1>6/25 ~ 7/3 日本東京自由行</h1>
     <p style="font: icon; font-size: 10px; text-align: right;">2023/05/29 Last updated</p>
-    <h2 id="Day1">Day1 6/25 (日)</h2>
-      <h3>去程</h3><div class="h4-indent">
-      <h4>三姊妹航班 日本捷星航空(jetstar)</h4>
-        <p>(TW)桃園機場 <span class="time">02:40</span> - (JP)成田機場 <span class="time">07:00</span></p>
-        <ul>
-          <li>行李寄放</li>
-          <li>機場巴士班次，一趟15分鐘？搭乘時間 9：47/13：20</li>
-          <img src="../images/airport-bus.jpg" width="600px">
-          <li>酒酒井Outlet</li>
-          <li>13:30左右回到機場等阿華姊妹花</li>
-        </ul>
-      <h4>兩老航班 華航</h4>
-        <p>(TW)桃園機場 <span class="time">08:50</span> - (JP)成田機場 <span class="time">13:15</span></p>
-        <p>接到後直接前往住宿點（查要多久會到）</p>
-      </div>
-      <h3>這幾天的家：ReLa Higashi Matsudo</h3>
-        <img src="../images/home-24px.png" class="icon" alt="home" width="24px">
-          <p><span lang="jp">〒270-2225 千葉県松戸市東松戸１丁目３−2</span>&ensp;
-            <a href="https://goo.gl/maps/9rd9KkithYw98Kgr7">地圖</a></p>
-        <img src="../images/metro-24px.png" class="icon" alt="metro station" width="24px">
-          <p>JR 東松戶站</p>
-      <h3>晚餐：一蘭</h3>
-        <p>地址：</p>
 
-    <h2 id="Day2">Day2 6/26 (一)</h2>
-      <p>原宿Day</p>
-      <h3>早午餐：bills Futako-Tamagawa</h3>
-        <img src="../images/pin-24px.png" class="icon" alt="address" width="24px">
-          <p><span lang="jp">〒158-0094 東京都世田谷区玉川２丁目２７−5 高島屋S・Cマロニエコート 3F</span>&ensp;
-            <a href="https://goo.gl/maps/zAkFivzp4X5pYXRj8">地圖</a></p>
-        <img src="../images/metro-24px.png" class="icon" alt="metro station" width="24px">
-          <p>二子玉川站</p>
-      <h3>竹下通逛街</h3>
-      <h3>晚餐：燒肉亭 六歌仙 新宿西口1號店</h3>
-        <img src="../images/pin-24px.png" class="icon" alt="address" width="24px">
-          <p><span lang="jp">〒160-0023 東京都新宿区西新宿１丁目３−1 新宿サンフラワービル 6F/7F</span>&ensp;
-            <a href="https://goo.gl/maps/HLDSE1AiNtwM3d736">地圖</a></p>
-        <img src="../images/metro-24px.png" class="icon" alt="metro station" width="24px">
-          <p>新宿西口站</p>
+    <article class="accordion">
+      <section id="Day1">
+        <label><h2>Day1 6/25 (日)</h2>
+          <input type="radio" name="day">
+        </label>
+          <h3>去程</h3><div class="h4-indent">
+          <h4>三姊妹航班 日本捷星航空(jetstar)</h4>
+            <p>(TW)桃園機場 <span class="time">02:40</span> - (JP)成田機場 <span class="time">07:00</span></p>
+            <ul>
+              <li>行李寄放</li>
+              <li>機場巴士班次，一趟15分鐘？搭乘時間 9：47/13：20</li>
+              <img src="../images/airport-bus.jpg" width="600px">
+              <li>酒酒井Outlet</li>
+              <li>13:30左右回到機場等阿華姊妹花</li>
+            </ul>
+          <h4>兩老航班 華航</h4>
+            <p>(TW)桃園機場 <span class="time">08:50</span> - (JP)成田機場 <span class="time">13:15</span></p>
+            <p>接到後直接前往住宿點（查要多久會到）</p>
+          </div>
+          <h3>這幾天的家：ReLa Higashi Matsudo</h3>
+            <img src="../images/home-24px.png" class="icon" alt="home" width="24px">
+              <p><span lang="jp">〒270-2225 千葉県松戸市東松戸１丁目３−2</span>&ensp;
+                <a href="https://goo.gl/maps/9rd9KkithYw98Kgr7">地圖</a></p>
+            <img src="../images/metro-24px.png" class="icon" alt="metro station" width="24px">
+              <p>JR 東松戶站</p>
+          <h3>晚餐：一蘭</h3>
+            <p>地址：</p>
+      </section>
 
-    <h2 id="Day3">Day3 6/27 (二)</h2>
-      <h3>午餐：<span lang="jp">挽肉と米 渋谷店</span></h3>
-        <img src="../images/pin-24px.png" class="icon" alt="address" width="24px">
-          <p><span lang="jp">〒150-0043 東京都渋谷区道玄坂２丁目２８−1 椎津ビル ３F</span>&ensp;
-            <a href="https://goo.gl/maps/uQ9Yz1tpPzBuCpyh8">地圖</a></p>
-        <img src="../images/metro-24px.png" class="icon" alt="metro station" width="24px">
-          <p>JR 澀谷站</p>
-        <ul>
-          <li>早上<span class="time">08:00</span>到，排隊領號碼牌，越前面可以選的時段越多</li>
-          <li>可能變下午吃，要看拿到號碼牌的時間</li>
-        </ul>
-      <h3>晚餐：<span lang="jp">梅丘 寿司の美登利 渋谷店</span></h3>
-        <img src="../images/pin-24px.png" class="icon" alt="address" width="24px">
-          <p><span lang="jp">〒150-0043 東京都渋谷区道玄坂１丁目１２−3 マークシティイースト ４Ｆ</span>&ensp;
-            <a href="https://goo.gl/maps/8ZeEysXZMhZCpjbVA">地圖</a></p>
-        <ul>
-          <li>現場候位，要早點去那邊登記</li>
-        </ul>
+      <section id="Day2">
+        <label><h2>Day2 6/26 (一)</h2>
+          <input type="radio" name="day">
+        </label>
+          <p>原宿Day</p>
+          <h3>早午餐：bills Futako-Tamagawa</h3>
+            <img src="../images/pin-24px.png" class="icon" alt="address" width="24px">
+              <p><span lang="jp">〒158-0094 東京都世田谷区玉川２丁目２７−5 高島屋S・Cマロニエコート 3F</span>&ensp;
+                <a href="https://goo.gl/maps/zAkFivzp4X5pYXRj8">地圖</a></p>
+            <img src="../images/metro-24px.png" class="icon" alt="metro station" width="24px">
+              <p>二子玉川站</p>
+          <h3>竹下通逛街</h3>
+          <h3>晚餐：燒肉亭 六歌仙 新宿西口1號店</h3>
+            <img src="../images/pin-24px.png" class="icon" alt="address" width="24px">
+              <p><span lang="jp">〒160-0023 東京都新宿区西新宿１丁目３−1 新宿サンフラワービル 6F/7F</span>&ensp;
+                <a href="https://goo.gl/maps/HLDSE1AiNtwM3d736">地圖</a></p>
+            <img src="../images/metro-24px.png" class="icon" alt="metro station" width="24px">
+              <p>新宿西口站</p>
+      </section>
 
-    <h2 id="Day4">Day4 6/28 (三)</h2>
-      <h3>迪士尼樂園(待定)</h3>
-        <p style="color: red;">尚未訂票</p>
+      <section id="Day3">
+        <label><h2>Day3 6/27 (二)</h2>
+          <input type="radio" name="day">
+        </label>
+          <h3>午餐：<span lang="jp">挽肉と米 渋谷店</span></h3>
+            <img src="../images/pin-24px.png" class="icon" alt="address" width="24px">
+              <p><span lang="jp">〒150-0043 東京都渋谷区道玄坂２丁目２８−1 椎津ビル ３F</span>&ensp;
+                <a href="https://goo.gl/maps/uQ9Yz1tpPzBuCpyh8">地圖</a></p>
+            <img src="../images/metro-24px.png" class="icon" alt="metro station" width="24px">
+              <p>JR 澀谷站</p>
+            <ul>
+              <li>早上<span class="time">08:00</span>到，排隊領號碼牌，越前面可以選的時段越多</li>
+              <li>可能變下午吃，要看拿到號碼牌的時間</li>
+            </ul>
+          <h3>晚餐：<span lang="jp">梅丘 寿司の美登利 渋谷店</span></h3>
+            <img src="../images/pin-24px.png" class="icon" alt="address" width="24px">
+              <p><span lang="jp">〒150-0043 東京都渋谷区道玄坂１丁目１２−3 マークシティイースト ４Ｆ</span>&ensp;
+                <a href="https://goo.gl/maps/8ZeEysXZMhZCpjbVA">地圖</a></p>
+            <ul>
+              <li>現場候位，要早點去那邊登記</li>
+            </ul>
+      </section>
 
-    <h2 id="Day5">Day5 6/29 (四)</h2>
-      <h3>早餐</h3>
-      <h3>午餐</h3>
-      <h3>晚餐</h3>
+      <section id="Day4">
+        <label><h2>Day4 6/28 (三)</h2>
+          <input type="radio" name="day">
+        </label>
+          <h3>迪士尼樂園(待定)</h3>
+            <p style="color: red;">尚未訂票</p>
+      </section>
 
-    <h2 id="Day6">Day6 6/30 (五)</h2>
-      <h3>早餐：築地市場(待定)</h3>
-      <h3>午餐</h3>
-      <h3>晚餐</h3>
+      <section id="Day5">
+        <label><h2>Day5 6/29 (四)</h2>
+          <input type="radio" name="day">
+        </label>
+          <h3>早餐</h3>
+          <h3>午餐</h3>
+          <h3>晚餐</h3>
+      </section>
 
-    <h2 id="Day7">Day7 7/1 (六)</h2>
-      <h3>早餐</h3>
-      <h3>午餐</h3>
-      <h3>晚餐</h3>
+      <section id="Day6">
+        <label><h2>Day6 6/30 (五)</h2>
+          <input type="radio" name="day">
+        </label>
+          <h3>早餐：築地市場(待定)</h3>
+          <h3>午餐</h3>
+          <h3>晚餐</h3>
+      </section>
 
-    <h2 id="Day8">Day8 7/2 (日)</h2>
-      <p>這天大概是藥妝店之旅</p>
-      <h3>早餐</h3>
-      <h3>午餐</h3>
-      <h3>晚餐</h3>
+      <section id="Day7">
+        <label><h2>Day7 7/1 (六)</h2>
+          <input type="radio" name="day">
+        </label>
+          <h3>早餐</h3>
+          <h3>午餐</h3>
+          <h3>晚餐</h3>
+      </section>
 
-    <h2 id="Day9">Day9 7/3 (一)</h2>
-      <h3>早餐</h3>
-      <h3>午餐</h3>
-      <h3>回程</h3><div class="h4-indent">
-      <h4>三姊妹航班 日本捷星航空(jetstar)</h4>
-        <p>(JP)成田機場 <span class="time">22:50</span> - (TW)桃園機場 <ins>7/4</ins> <span class="time">01:40</span></p>
-      <h4>兩老航班 華航</h4>
-        <p>(JP)成田機場 <span class="time">18:20</span> - (TW)桃園機場 <span class="time">21:10</span></p>
-      </div>
+      <section id="Day8">
+        <label><h2>Day8 7/2 (日)</h2>
+          <input type="radio" name="day">
+        </label>
+          <p>這天大概是藥妝店之旅</p>
+          <h3>早餐</h3>
+          <h3>午餐</h3>
+          <h3>晚餐</h3>
+      </section>
 
-    <h2>還沒排進的行程</h2>
-    <ul>
-      <li>Shibuya sky(待定)(尚未訂票)</li>
-      <li>Burger prince</li>
-      <li>Shake shack</li>
-      <li>Shogun burger</li>
-      <li>抹茶甜點店?冰店?</li>
-      <li>富士山腳下</li>
-      <li>根室花丸</li>
-      <li>原宿一日遊</li>
+      <section id="Day9">
+        <label><h2>Day9 7/3 (一)</h2>
+          <input type="radio" name="day">
+        </label>
+          <h3>早餐</h3>
+          <h3>午餐</h3>
+          <h3>回程</h3><div class="h4-indent">
+          <h4>三姊妹航班 日本捷星航空(jetstar)</h4>
+            <p>(JP)成田機場 <span class="time">22:50</span> - (TW)桃園機場 <ins>7/4</ins> <span class="time">01:40</span></p>
+          <h4>兩老航班 華航</h4>
+            <p>(JP)成田機場 <span class="time">18:20</span> - (TW)桃園機場 <span class="time">21:10</span></p>
+          </div>
+      </section>
+
+      <h2>還沒排進的行程</h2>
       <ul>
-        <li>表參道</li>
-        <li>明智神宮</li>
-        <li>中午 Afuri原宿</li>
+        <li>Shibuya sky(待定)(尚未訂票)</li>
+        <li>Burger prince</li>
+        <li>Shake shack</li>
+        <li>Shogun burger</li>
+        <li>抹茶甜點店?冰店?</li>
+        <li>富士山腳下</li>
+        <li>根室花丸</li>
+        <li>原宿一日遊</li>
+        <ul>
+          <li>表參道</li>
+          <li>明智神宮</li>
+          <li>中午 Afuri原宿</li>
+        </ul>
+        <li>築地市場</li>
+        <ul>
+          <li>Calbee+薯條店</li>
+          <li>東京車站布丁</li>
+        </ul>
+        <li>網卡</li>
+        <li>快速通關</li>
       </ul>
-      <li>築地市場</li>
-      <ul>
-        <li>Calbee+薯條店</li>
-        <li>東京車站布丁</li>
-      </ul>
-      <li>網卡</li>
-      <li>快速通關</li>
-    </ul>
+    </article>
   </body>
 </html>
