--- a/travel/tokyo2023.html
+++ b/travel/tokyo2023.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../styles/mobile.css" rel="stylesheet">
     <style type="text/css">
-      .h4-indent {
+      .indent {
         margin-left: 20px;
       }
       .flight {
@@ -23,7 +23,9 @@
         padding-right: 15px;
       }
       .metro {
+        display: block;
         padding: 3px 5px;
+        background-color: rgb(233, 229, 214);
       }
       .itinerary {
         height: 0;
@@ -35,12 +37,18 @@
       input[type=radio] {
         display: none;
       }
+      h3 p {
+        margin-left: 10px;
+      }
+      tr:nth-child(even) {background: gray}
+      tr:nth-child(odd) {background: white}
     </style>
   </head>
 
   <body>
     <h1>6/25 ~ 7/3 日本東京自由行</h1>
-    <p style="font: icon; font-size: 10px; text-align: right;">2023/06/16 Last updated</p>
+    <p style="font: icon; font-size: 15px; text-align: right;">2023/06/16 Last updated</p>
+    <hr>
 
     <article><!--accordion-->
       <section><!--Day1-->
@@ -50,8 +58,9 @@
           <h3>去程</h3>
           <div class="flight">
             <h4>三姊妹航班 日本捷星航空(jetstar)</h4>
-              <p>(TW)桃園機場 <span class="time">02:40</span> - (JP)成田機場 <span class="time">07:00</span></p>
-          </div><div class="h4-indent">
+            <p>(TW)桃園機場 <span class="time">02:40</span> - (JP)成田機場 <span class="time">07:00</span></p>
+          </div>
+          <div class="indent">
           <a href="https://www.narita-airport.jp/ch2/service/svc_07">行李寄放地點</a>
           <h4>千葉酒酒井Outlet</h4>
             <p>營業時間：早上10點開門，<a href="https://www.bobblog.tw/shisui-premium-outlets-transport/">交通方式圖解</a></p>
@@ -63,32 +72,48 @@
               <img src="../images/airport-bus.jpg" width="700px">
               <li>13:40左右回到機場等阿華姊妹花</li>
             </ul>
-          </div><div class="flight">
+          </div>
+          <div class="flight">
             <h4>兩老航班 華航</h4>
               <p>(TW)桃園機場 <span class="time">08:50</span> - (JP)成田機場 <span class="time">13:15</span></p>
-          </div><div class="h4-indent">
-            <p>接到後直接前往搭乘<strong>京成成田SKYACCESS ACCESS特急（往京成上野）</strong><br>
-               <u>14:04</u>與<u>14:44</u>各有一班，預計分別於<u>14:38</u>與<u>15:18</u>抵達東松戶站<br>
-               票價953日圓，直達車無須轉車（要轉車的反而都比較貴，我查app的）</p>
           </div>
+          <br>
+          <img src="../images/access.PNG" width="700px">
+          <div class="indent">
+            <p>接到後直接前往搭乘<strong>京成成田SKYACCESS ACCESS特急（往京成上野）</strong><br>
+               <a href="https://www.funliday.com/posts/narita-airport-tokyo-keisei-access-express/">搭車教學</a><br>
+               <u>14:04</u>與<u>14:44</u>各有一班，預計分別於<u>14:38</u>與<u>15:18</u>抵達東松戶站<br>
+               票價953日圓，直達車無須轉車（要轉車的反而都比較貴，查app的）</p>
+          </div>
+          <br>
+          <img src="../images/home-64px.png" class="icon" alt="home" width="64px">
           <h3>這幾天的家：ReLa Higashi Matsudo</h3>
-            <img src="../images/home-32px.png" class="icon" alt="home" width="32px">
-              <p><span lang="jp">〒270-2225 千葉県松戸市東松戸１丁目３−2</span>&ensp;
-                <a href="https://goo.gl/maps/9rd9KkithYw98Kgr7">地圖</a></p>
-            <img src="../images/metro-32px.png" class="icon" alt="metro station" width="32px">
-              <p>JR 東松戶站</p>
+            <table>
+              <td>
+                <span lang="jp">〒270-2225 千葉県松戸市東松戸１丁目３−2</span>
+              </td>
+              <td>
+                東松戶站
+              </td>
+            </table>
+          <br>
+            <p><span lang="jp">〒270-2225 千葉県松戸市東松戸１丁目３−2</span>&ensp;
+              <a href="https://goo.gl/maps/9rd9KkithYw98Kgr7">地圖</a></p>
           <h3>Shibuya Sky</h3>
-            <img src="../images/pin-32px.png" class="icon" alt="address" width="32px">
+            <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
               <p><span lang="jp">〒150-6145 東京都渋谷区渋谷２丁目２４−12, Shibuya Scramble Square, 14階・45階・46階・屋上</span>&ensp;
                 <a href="https://goo.gl/maps/w9HEo9ASM6e7BBqJA">地圖</a></p>
-            <img src="../images/metro-32px.png" class="icon" alt="metro station" width="32px">
-              <p><span lang="jp">渋谷駅</span></p>
-            <p class="h4-indent">當天日落時間 <span class="time">19:00</span></p>
+            <img src="../images/metro-64px.png" class="icon" alt="metro station" width="64px">
+              <p><span lang="jp">渋谷駅</span>，從東松戶出發大概要花1個小時=大約下午4點要從住處出發</p>
+            <div class="indent">
+              <p>門票入場時間：17:20<br>
+                 當天日落時間 <span class="time">19:00</span></p>
+            </div>
           <h3>晚餐：一蘭 澀谷西班牙坂店（<span lang="jp">渋谷スペイン坂店</span>）</h3>
-            <img src="../images/pin-32px.png" class="icon" alt="address" width="32px">
+            <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
               <p><span lang="jp">〒150-0042 東京都渋谷区宇田川町１３−7 コヤスワン B1F</span>&ensp;
                 <a href="https://goo.gl/maps/duYA29M6VERGosWS9">地圖</a></p>
-            <img src="../images/metro-32px.png" class="icon" alt="metro station" width="32px">
+            <img src="../images/metro-64px.png" class="icon" alt="metro station" width="64px">
               <p>走路</p>
         </div>
       </section>
@@ -99,17 +124,17 @@
         <div class="itinerary">
           <p>原宿Day</p>
           <h3>早午餐：bills Futako-Tamagawa</h3>
-            <img src="../images/pin-32px.png" class="icon" alt="address" width="32px">
+            <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
               <p><span lang="jp">〒158-0094 東京都世田谷区玉川２丁目２７−5 高島屋S・Cマロニエコート 3F</span>&ensp;
                 <a href="https://goo.gl/maps/zAkFivzp4X5pYXRj8">地圖</a></p>
-            <img src="../images/metro-32px.png" class="icon" alt="metro station" width="32px">
+            <img src="../images/metro-64px.png" class="icon" alt="metro station" width="64px">
               <p>二子玉川站</p>
           <h3>竹下通逛街</h3>
           <h3>晚餐：燒肉亭 六歌仙 新宿西口1號店</h3>
-            <img src="../images/pin-32px.png" class="icon" alt="address" width="32px">
+            <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
               <p><span lang="jp">〒160-0023 東京都新宿区西新宿１丁目３−1 新宿サンフラワービル 6F/7F</span>&ensp;
                 <a href="https://goo.gl/maps/HLDSE1AiNtwM3d736">地圖</a></p>
-            <img src="../images/metro-32px.png" class="icon" alt="metro station" width="32px">
+            <img src="../images/metro-64px.png" class="icon" alt="metro station" width="64px">
               <p>新宿西口站</p>
         </div>
       </section>
@@ -119,17 +144,17 @@
         <input type="radio" name="day" id="Day3">
         <div class="itinerary">
           <h3>午餐：<span lang="jp">挽肉と米 渋谷店</span></h3>
-            <img src="../images/pin-32px.png" class="icon" alt="address" width="32px">
+            <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
               <p><span lang="jp">〒150-0043 東京都渋谷区道玄坂２丁目２８−1 椎津ビル ３F</span>&ensp;
                 <a href="https://goo.gl/maps/uQ9Yz1tpPzBuCpyh8">地圖</a></p>
-            <img src="../images/metro-32px.png" class="icon" alt="metro station" width="32px">
+            <img src="../images/metro-64px.png" class="icon" alt="metro station" width="64px">
               <p>JR 澀谷站</p>
             <ul>
               <li>早上<span class="time">08:00</span>到，排隊領號碼牌，越前面可以選的時段越多</li>
               <li>可能變下午吃，要看拿到號碼牌的時間</li>
             </ul>
           <h3>晚餐：<span lang="jp">梅丘 寿司の美登利 渋谷店</span></h3>
-            <img src="../images/pin-32px.png" class="icon" alt="address" width="32px">
+            <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
               <p><span lang="jp">〒150-0043 東京都渋谷区道玄坂１丁目１２−3 マークシティイースト ４Ｆ</span>&ensp;
                 <a href="https://goo.gl/maps/8ZeEysXZMhZCpjbVA">地圖</a></p>
             <ul>
@@ -228,6 +253,7 @@
         </ul>
         <li>網卡</li>
         <li>快速通關</li>
+        <li>交通卡</li>
       </ul>
     </article>
   </body>
