--- a/bookmark.html
+++ b/bookmark.html
@@ -41,5 +41,14 @@
       <li><a href="https://fate.windada.com/cgi-bin/fate">紫微斗數命盤</a></li>
       <li><a href="https://www.ximizi.net/bazi_shengchen_bazi.php">生辰五行</a></li>
     </ul>
+    <ul>旅遊
+      <li><a href="https://matcha-jp.com/tw/6208">河口湖觀光景點</a></li>
+      <li><a href="https://www.funtime.com.tw/blog/funtime/fujisan">富士山攻略</a></li>
+      <li><a href="https://mimihan.tw/mount-fuji/">富士山一日遊</a></li>
+      <li><a href="http://bus-tw.fujikyu.co.jp/highway/">富士急行巴士</a></li>
+      <li><a href="https://mimihan.tw/tokyo/">東京自由行攻略</a></li>
+      <li><a href="https://mimihan.tw/tokyo-trips/">東京景點推薦</a></li>
+      <li><a href="https://wow-japan.com/attractions-fujikyu-land/">富士急樂園</a></li>
+    </ul>
   </body>
 </html>
